book star rating

--- a/src/main/resources/spring-frontend/books/slugmy.html
+++ b/src/main/resources/spring-frontend/books/slugmy.html
@@ -392,7 +392,7 @@ p.error-browser
                                     href="/tags/">Современные</a>,&#32;<a href="/tags/">Психологическая проза</a>
                             </div>
                             <div class="ProductCard-cost"><span class="ProductCard-titleProp" th:text="${slugBook?.priceOld}">Цена:</span><span
-                                    class="ProductCard-priceOld">₽300</span><span class="ProductCard-price" h:text="${slugBook?.discountPrice()}" >₽180</span>
+                                    class="ProductCard-priceOld">₽300</span><span class="ProductCard-price" th:text="${slugBook?.discountPrice()}" >₽180</span>
                             </div>
                             <!--+div.-info
                             //+div.-cost
@@ -463,11 +463,11 @@ p.error-browser
                             <div id="myOverlay"></div>
 
                         </div>
-                        <!--+div.-cart-->
-                        <!--    //+div.-cartElement.-cartElement_amount-->
-                        <!--    //    +Amount._product-->
-                        <!--    +div.-cartElement-->
-                        <!--        +btn('button')(data-sendstatus='UNLINK' data-bookid="[1111]")._muted Вернуть из архива-->
+<!--                        +div.-cart-->
+<!--                            //+div.-cartElement.-cartElement_amount-->
+<!--                            //    +Amount._product-->
+<!--                            +div.-cartElement-->
+<!--                                +btn('button')(data-sendstatus='UNLINK' data-bookid="[1111]")._muted Вернуть из архива-->
                     </div>
                 </div>
                 <div class="Product-comments">
@@ -531,7 +531,7 @@ p.error-browser
                             </div>
                         </form>
                     </div>
-                    <div class="Comment">
+                    <div class="Comment" th:each="userReview : ${reviewList}">
                         <div class="Comment-column Comment-column_pict">
                             <div class="Comment-avatar">
                             </div>
@@ -539,9 +539,9 @@ p.error-browser
                         <div class="Comment-column">
                             <header class="Comment-header">
                                 <div>
-                                    <strong class="Comment-title">Александр Кузнецов<span class="Comment-rating"><span
+                                    <strong class="Comment-title" th:text="${userReview?.id}">Александр Кузнецов<span class="Comment-rating"><span
                                             class="Rating Rating_comment"><span class="Rating-stars"><span
-                                            class="Rating-star Rating-star_view">
+                                            class="Rating-star Rating-star_view" th:text="${userReview?.bookRating()}">
                               <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
                                 <g>
                                   <g>
@@ -582,11 +582,11 @@ p.error-browser
                                   </g>
                                 </g>
                               </svg></span></span></span></span>
-                                    </strong><span class="Comment-date">17.04.2020 16:40</span>
+                                    </strong><span class="Comment-date" th:text="${userReview?.time}">17.04.2020 16:40</span>
                                 </div>
                             </header>
                             <div class="Comment-content">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit doli. Aenean commodo ligula
+                                <p th:text="${userReview?.text}">Lorem ipsum dolor sit amet, consectetuer adipiscing elit doli. Aenean commodo ligula
                                     eget dolor. Aenean massa. Cumtipsu sociis natoque penatibus et magnis dis parturient
                                     montesti, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
                                     eutu, pretiumem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
@@ -607,105 +607,6 @@ p.error-browser
                                                 class="btn-icon"><img src="/assets/img/icons/comment/dislike.svg"
                                                                       alt="dislike.svg"/></span><span
                                                 class="btn-content">100</span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Comment">
-                        <div class="Comment-column Comment-column_pict">
-                            <div class="Comment-avatar">
-                            </div>
-                        </div>
-                        <div class="Comment-column">
-                            <header class="Comment-header">
-                                <div>
-                                    <strong class="Comment-title">Дмитрий Петров<span class="Comment-rating"><span
-                                            class="Rating Rating_comment"><span class="Rating-stars"><span
-                                            class="Rating-star Rating-star_view">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span><span class="Rating-star Rating-star_view">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span><span class="Rating-star Rating-star_view">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span><span class="Rating-star Rating-star_view">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span><span class="Rating-star">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                                <g>
-                                  <g>
-                                    <path fill="#ffc000"
-                                          d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                                  </g>
-                                </g>
-                              </svg></span></span></span></span>
-                                    </strong><span class="Comment-date">17.04.2020 16:40</span>
-                                </div>
-                            </header>
-                            <div class="Comment-content">
-                                <div class="Spoiler">
-                                    <div class="Spoiler-visible">
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit doli. Aenean commodo
-                                            ligula eget dolor. Aenean massa. Cumtipsu sociis natoque penatibus et magnis
-                                            dis parturient montesti, nascetur ridiculus mus. Donec quam felis, ultricies
-                                            nec, pellentesque eutu, pretiumem. Nulla consequat massa quis enim. Donec
-                                            pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim
-                                            justotuio, rhoncus ut loret, imperdiet a, venenatis vitae, justo. Nullam
-                                            dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-                                            Vivamus element semper nisi. Aenean vulputate eleifend tellus. Aenean leo
-                                            ligula, porttitor eu, consequat vitae.
-                                        </p>
-                                    </div>
-                                    <div class="Spoiler-hide">
-                                        <p>Первая книга - сборник повестей и рассказов "Большой поток" - посвящена людям
-                                            леспромхоза. Автор книг "Рассказы" (1954), "Неразменное счастье. Повести и
-                                            рассказы" (1962). Наиболее известная его повесть "Девчата" (1961) переведена
-                                            на пятнадцать языков. По написанному им же сценарию был поставлен
-                                            одноименный фильм, до сих пор имеющий огромный успех.
-                                        </p>
-                                    </div>
-                                    <div class="Comment-footer">
-                                        <div class="Comment-appeal">
-                                            <button class="btn btn_white btn_like" data-btntype="check"
-                                                    data-check="false" data-btnradio="one1" data-likeid="222"><span
-                                                    class="btn-icon"><img src="/assets/img/icons/comment/like.svg"
-                                                                          alt="like.svg"/></span><span
-                                                    class="btn-content">100</span>
-                                            </button>
-                                            <button class="btn btn_white btn_dislike" data-btntype="check"
-                                                    data-check="false" data-btnradio="one1" data-likeid="222"><span
-                                                    class="btn-icon"><img src="/assets/img/icons/comment/dislike.svg"
-                                                                          alt="dislike.svg"/></span><span
-                                                    class="btn-content">50</span>
-                                            </button>
-                                        </div>
-                                        <button class="Spoiler-trigger btn btn_primary btn_nr" type="button"
-                                                data-showtext="Свернуть отзыв" data-hidetext="Показать отзыв полностью">
                                         </button>
                                     </div>
                                 </div>
