--- a/src/main/resources/spring-frontend/profile.html
+++ b/src/main/resources/spring-frontend/profile.html
@@ -9,7 +9,7 @@
 <!--[if IE 9]>
 <html class="ie9" lang="ru">
 <![endif]-->
-<!--[if gt IE 9]><!--> <html lang="ru"> <!--<![endif]-->
+<!--[if gt IE 9]><!--> <html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
 <head>
   <title>Тут название страницы написать</title>
   <meta name="description" content="Описание страницы">
@@ -120,12 +120,12 @@
                       <div class="form-group">
                         <label class="form-label" for="name">Имя
                         </label>
-                        <input class="form-input" id="name" name="name" type="text" value="Михаил"/>
+                        <input class="form-input" id="name" name="name" type="text" th:value="${curUsr?.name}" value="Михаил"/>
                       </div>
                       <div class="form-group">
                         <label class="form-label" for="mail">E-mail
                         </label>
-                        <input class="form-input" id="mail" name="mail" type="text" value="addr@sait.com" data-validate="require mail"/>
+                        <input class="form-input" id="mail" name="mail" type="text" th:value="${curUsr?.email}" value="addr@sait.com" data-validate="require mail"/>
                         <div class="Profile-btn Profile-btn_confirm">
                           <button class="btn btn_primary" type="button">Подтвердить
                           </button>
@@ -134,7 +134,7 @@
                       <div class="form-group">
                         <label class="form-label" for="phone">Телефон
                         </label>
-                        <input class="form-input" id="phone" name="phone" type="text" value="+70000000000" data-mask="+7 (999) 999-99-99" data-validate="require"/>
+                        <input class="form-input" id="phone" name="phone" type="text"  th:value="${curUsr?.phone}" value="+70000000000" data-mask="+7 (999) 999-99-99" data-validate="require"/>
                         <div class="Profile-btn Profile-btn_confirm">
                           <button class="btn btn_primary" type="button">Подтвердить
                           </button>
