feat: authorization via google account and github

--- a/src/main/resources/spring-frontend/signin.html
+++ b/src/main/resources/spring-frontend/signin.html
@@ -126,6 +126,14 @@ p.error-browser
                                                                  th:href="@{/signup}"
                                                                  href="/signup.html">Зарегистрироваться</a>
                     </div>
+                    <div class="form-group form-group_center"><a class="Login-reg"
+                                                                 th:href="@{/oauth2/authorization/google}"
+                                                                 href="/signup.html">Войти с Google</a>
+                    </div>
+                    <div class="form-group form-group_center"><a class="Login-reg"
+                                                                 th:href="@{/oauth2/authorization/github}"
+                                                                 href="/signup.html">Войти с GitHub</a>
+                    </div>
                 </div>
             </form>
         </main>
