--- a/src/main/resources/spring-frontend/signin.html
+++ b/src/main/resources/spring-frontend/signin.html
@@ -134,6 +134,10 @@ p.error-browser
                                                                  th:href="@{/oauth2/authorization/github}"
                                                                  href="/signup.html">Войти с GitHub</a>
                     </div>
+<!--                    <div class="form-group form-group_center"><a class="Login-reg"-->
+<!--                                                                 th:href="@{/oauth2/authorization/vk}"-->
+<!--                                                                 href="/signup.html">Войти с VK</a>-->
+<!--                    </div>-->
                 </div>
             </form>
         </main>
